- New: Added Behat tests thanks to Corbière Alain, to run block_gismo tests use:
  vendor/bin/behat --config /path/to/your/CFG_behat_dataroot/behat/behat.yml  --tags @block_gismo --format html --out results.html 
- Fix: Thanks to Tim Lock corrected a problem on a query with mdl_ forced in table names
- Fix: Thanks to Tim Lock Fix up some page context warnings
- Fix: Moved the main classes in the classes directory
- Fix: Wiki/Forum/Chat charts modified "Write" in "Write & Update" events (it will sum them)
- Fix: Added global $CFG to function FetchStartDateAndTime thanks to Nadav Kavalerchik
- Fix: Changed all get_context_instance calls to context_*::instance thanks to Nadav Kavalerchik
- Fix: Updated version and requires moodle 2.7.x
- Fix: Updated all queries in exporter_data.php and ajax.php from log table to logstore_standard

MOODLE_27 on master branch (2014-10-28)

Release 3.2 (2013-10-15)
- New: Added books to resources list
- New: Reorganised resources list by type
- New: Added completion menu (all completion charts will go in this menu)
- New: Added resources completion chart
- New: Added quizzes completion chart
- New: Added wikis completion chart
- New: Added assignments completion chart
- New: Added assignments 2.2 completion chart
- New: Added chats completion chart
- New: Added forums completion chart
- Reorganised gismo main page
- Fix: Solved some minor bugs and translation of missing strings
- Fix: Solved bug on assignments student view
- Fix: Solved bug on completion charts (Thanks to Dečman Mitja)
- Fix: Solved bug on lang strings to upload on AMOS (lang.moodle.org)
- Thanks to Saad Saleem for the help on the completion charts
- Thanks to Mitsuhiro Yoshida for japanese translation
- Thanks to Elisabetta Frick and Alain Corbière for french translation
- Thanks to Riccardo Mazza for italian translation
- Thanks to Anna Pico Schwendener for german translation
- Thanks to Dečman Mitja for testing completion charts

Release 3.1.2 (2013-09-30)