@@ -4,6 +4,7 @@ Release 3.3 (2014-12-03)
   vendor/bin/behat --config /path/to/your/CFG_behat_dataroot/behat/behat.yml  --tags @block_gismo --format html --out results.html 
 - Fix: Thanks to Tim Lock corrected a problem on a query with mdl_ forced in table names
 - Fix: Thanks to Tim Lock Fix up some page context warnings
+- Fix: Thanks to Tim Lock Upping the max execution time is fine for the CRON but during unit tests there is code that fails if the max execution time isn't 0. (MDL-38989)
 - Fix: Moved the main classes in the classes directory
 - Fix: Wiki/Forum/Chat charts modified "Write" in "Write & Update" events (it will sum them)
 - Fix: Added global $CFG to function FetchStartDateAndTime thanks to Nadav Kavalerchik
